# soundness-tui

./: .gitignore  Cargo.toml  README.deploy.md  README.md  index.html  package.json  style.css
api/: health.js  soundness-proxy.js
pkg/: soundness_tui.d.ts  soundness_tui.js  soundness_tui_bg.wasm  soundness_tui_bg.wasm.d.ts
src/: core.rs  lib.rs
