[package]
name = "soundness-tui"
version = "0.2.0"
edition = "2021"
description = "A WebAssembly-based TUI for Soundness proof submission"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
yew = { version = "0.21.0", features = ["csr"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
serde-wasm-bindgen = "0.6.5"
aes-gcm-siv = "0.11.1"
base64 = "0.22.1"
bip39 = "2.2.0"
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
getrandom = { version = "0.2.16", features = ["js"] }
hmac = "0.12.1"
pbkdf2 = "0.12.2"
sha2 = "0.10.9"
thiserror = "1.0.69"
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
log = "0.4.27"
shlex = "1.3.0"
regex = "1.11.0"
gloo-timers = { version = "0.3.0", features = ["futures"] }
js-sys = "0.3.77"
web-sys = { version = "0.3.77", features = [
  "console",
  "HtmlInputElement",
  "HtmlElement",
  "Window",
  "Storage",
] }

[profile.release]
opt-level = 3
lto = true
